[tool.poetry]
name = "test-packet-send"
version = "0.1.0"
description = ""
readme = "README.md"
packages = [{include = "test_packet_send"}]

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.8.3"
asyncio = "^3.4.3"
requests = "^2.28.2"
cchardet = "^2.1.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
